--- a/package.json
+++ b/package.json
@@ -12,21 +12,32 @@
     "babel-preset-stage-2": "6.24.1",
     "babel-preset-stage-3": "6.24.1",
     "babel-register": "6.26.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "5.1.3",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
     "identicon.js": "^2.3.3",
     "ipfs-http-client": "^33.1.1",
     "jquery": "^3.6.0",
-    "react": "16.8.4",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "react": "^17.0.2",
+    "react-blockies": "^1.4.1",
     "react-bootstrap": "2.0.0",
-    "react-dom": "16.8.4",
-    "react-scripts": "2.1.3",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.1",
+    "react-scripts": "4.0.3",
+    "sequelize": "^6.9.0",
+    "sqlite3": "^5.0.2",
     "truffle": "^5.4.17",
     "web3": "^1.6.0"
   },
-  "homepage": "http://dappuniversity.github.io/decentragram",
+  "homepage": "",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -35,6 +46,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": "react-app"
   },
