--- a/package.json
+++ b/package.json
@@ -24,14 +24,13 @@
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
-    "pg": "^8.7.1",
-    "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-bootstrap": "2.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "sass": "^1.43.4",
     "sequelize": "^6.9.0",
     "sqlite3": "^5.0.2",
     "truffle": "^5.4.17",
