--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "truffle": "^5.4.17",
     "web3": "^1.6.0"
   },
-  "homepage": "",
+  "homepage": "https://hc-tw.github.io/BCOIP-PRO/",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
