--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-register": "6.26.0",
     "body-parser": "^1.19.0",
     "bootstrap": "5.1.3",
+    "bootstrap-input-spinner": "^3.1.7",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
