--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "BCOIP PRO",
-  "name": "BCOIP PRO",
+  "short_name": "BCLP",
+  "name": "Blockchain-based Collaborative Loyalty Program for Business Consortium",
   "icons": [
     {
       "src": "BlockMan.ico",
