--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "node-fetch": "^2.6.7",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-bootstrap": "2.0.0",
